WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192713
CRASH in CDMInstanceSessionFairPlayStreamingAVFObjC::closeSession(WTF::String const&, WTF::Function<void ()>&&)
https://bugs.webkit.org/show_bug.cgi?id=192713
Summary
CRASH in CDMInstanceSessionFairPlayStreamingAVFObjC::closeSession(WTF::String...
Jer Noble
Reported
2018-12-14 13:19:18 PST
CRASH in CDMInstanceSessionFairPlayStreamingAVFObjC::closeSession(WTF::String const&, WTF::Function<void ()>&&)
Attachments
Patch
(8.90 KB, patch)
2018-12-14 13:36 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-12-14 13:19:51 PST
<
rdar://problem/46739706
>
Jer Noble
Comment 2
2018-12-14 13:36:29 PST
Created
attachment 357336
[details]
Patch
WebKit Commit Bot
Comment 3
2018-12-14 14:59:43 PST
Comment on
attachment 357336
[details]
Patch Clearing flags on attachment: 357336 Committed
r239236
: <
https://trac.webkit.org/changeset/239236
>
WebKit Commit Bot
Comment 4
2018-12-14 14:59:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug